# KafkaDesk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
docs/: README.md
scripts/: start.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_replay_audit.sql  0003_correlation_rules.sql  0004_message_bookmarks.sql  0005_saved_queries.sql  0006_cluster_auth_materialization.sql  0007_topic_group_tags.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: state.rs
src-tauri/src/commands/: audit.rs  bookmarks.rs  clusters.rs  correlation.rs  groups.rs  messages.rs  mod.rs  preferences.rs  replay.rs  replay_policy.rs  saved_queries.rs  schema_registry.rs  system.rs  topics.rs  trace.rs
src-tauri/src/models/: audit.rs  bookmark.rs  cluster.rs  correlation.rs  error.rs  group.rs  message.rs  mod.rs  preferences.rs  replay.rs  replay_policy.rs  saved_query.rs  schema_registry.rs  topic.rs  trace.rs  validation.rs
src-tauri/src/repositories/: sqlite.rs
src-tauri/src/services/: audit.rs  bookmarks.rs  clusters.rs  connectivity.rs  correlation.rs  credentials.rs  groups.rs  kafka_config.rs  messages.rs  mod.rs  preferences.rs  replay.rs  replay_policy.rs  saved_queries.rs  schema_registry.rs  topics.rs  trace.rs
src-tauri/tests/: migrations.rs
(+97 files in other folders)
