[package]
name = "traceforge"
version = "0.1.0"
description = "KafkaDesk desktop runtime"
authors = ["OpenCode"]
edition = "2021"

[lib]
name = "traceforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
apache-avro = "0.17"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
rdkafka = { version = "0.39", features = ["cmake-build", "ssl-vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
